--- a/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
 						<!--begin::Sidebar toggle-->
 						<div id="kt_app_sidebar_toggle" class="app-sidebar-toggle btn btn-sm btn-icon btn-color-warning me-n2 d-none d-lg-flex" data-kt-toggle="true" data-kt-toggle-state="active" data-kt-toggle-target="body" data-kt-toggle-name="app-sidebar-minimize">
 
-							<i class="bi bi-list-ul rotate-180" style="font-size:18px; color: black"</i>
+							<i class="bi bi-list-ul rotate-180" style="font-size:18px;">
 							<span class="path1"></span>
 							<span class="path2"></span>
 							</i>
