--- a/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
 						</div>
 						<!--end::Sidebar mobile toggle-->
 						<!--begin::Logo-->
-						<a href="../dist/index.html" class="app-sidebar-logo">
+						<a asp-area="Admin" asp-controller="HomeAdmin" asp-action="Index" class="app-sidebar-logo">
 							<h3>Admin</h3>
 						</a>
 						<!--end::Logo-->
@@ -275,28 +275,28 @@
 						<div id="#kt_app_sidebar_menu" data-kt-menu="true" data-kt-menu-expand="false" class="flex-column-fluid menu menu-sub-indention menu-column menu-rounded menu-active-bg mb-7">
 
 							<!--begin:Menu item-->
-							<div data-kt-menu-trigger="click" class="menu-item here show menu-accordion">
+							<a asp-area="Admin" asp-controller="HomeAdmin" asp-action="Index" class="menu-item here show menu-accordion">
 								<!--begin:Menu link-->
 								<span class="menu-link">
 									<span class="menu-icon">
-										<i class="ki-duotone ki-element-11 fs-1">
+										<i class="bi bi-stack" style="font-size: 18px">
 											<span class="path1"></span>
 											<span class="path2"></span>
 											<span class="path3"></span>
 											<span class="path4"></span>
 										</i>
 									</span>
-									<a class="menu-title">Tổng quan</a>
+									<span class="menu-title">Tổng quan</span>
 								</span>
 								<!--end:Menu link-->
-							</div>
+							</a>
 							<!--end:Menu item-->
 							<!--begin:Menu item-->
 							<div data-kt-menu-trigger="click" class="menu-item here show menu-accordion">
 								<!--begin:Menu link-->
 								<span class="menu-link">
 									<span class="menu-icon">
-										<i class="bi bi-pen-fill" style="font-size: 18px">
+										<i class="bi bi-pencil-square" style="font-size: 18px">
 											<span class="path1"></span>
 											<span class="path2"></span>
 											<span class="path3"></span>
@@ -473,6 +473,21 @@
 								<!--end:Menu sub-->
 							</div>
 							<!--end:Menu item-->
+							<a asp-area="Customer" asp-controller="Home" asp-action="Index" class="menu-item here show menu-accordion">
+								<!--begin:Menu link-->
+								<span class="menu-link">
+									<span class="menu-icon">
+										<i class="bi bi-house-door" style="font-size: 18px">
+										<span class="path1"></span>
+										<span class="path2"></span>
+										<span class="path3"></span>
+										<span class="path4"></span>
+										</i>
+									</span>
+									<span class="menu-title">Trang khách hàng</span>
+								</span>
+								<!--end:Menu link-->
+							</a>
 
 						</div>
 						<!--end::Sidebar menu-->
